--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
     <script src="https://kit.fontawesome.com/672be650cf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
-  <body style="height: 700px;" class="bg-success">
-       <div class="container bg-white mt-5 sticky-top" style="height: 550px; width: 500px;">
+  <body style="background-color: #88EDCF;">
+       <div class="container mt-5 sticky-top bg-light" style="width: 500px;">
            <form class="pt-4">
                 <div class="row text-center">
                    <h1 class="col font-weight-light">Sign In</h1>
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                  <div class="form-row">
-                    <div class="col border border-light p-2 ml-4 mr-4"><button type="button" class=" btn btn-success ml-1 p-2 rounded" style="width: 402px;"> Login </button></div>
+                    <div class="col border border-light p-2 ml-4 mr-4"><button type="button" class=" btn ml-1 p-2 rounded" style="width: 402px; background-color: #88EDCF;"> Login </button></div>
                 </div>
                 <div class="row bg-light border-top border-bottom mt-5">
                     <div class="col pt-3 pr-5 pl-5 pb-5 text-right" style="font-size: 18px; "> 
